--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.3.1",
     "diff": "^5.1.0",
     "emotion": "^10.0.27",
+    "enzyme": "^3.11.0",
     "memoize-one": "^6.0.0",
     "prop-types": "^15.8.1"
   },
@@ -50,6 +51,8 @@
     "@semantic-release/git": "10.0.1",
     "@testing-library/react": "^12.1.5",
     "@types/diff": "^5.0.2",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/expect": "^1.20.3",
     "@types/memoize-one": "^4.1.1",
     "@types/mocha": "^5.2.5",
@@ -61,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "css-loader": "^6.7.1",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
