--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-diff-viewer-continued",
+  "name": "opsramp-react-diff-viewer-continued",
   "version": "3.2.2",
   "private": false,
   "description": "Continuation of a simple and beautiful text diff viewer component made with diff and React",
@@ -39,6 +39,7 @@
     "diff": "^5.1.0",
     "emotion": "^10.0.27",
     "enzyme": "^3.11.0",
+    "istanbul-lib-report": "^3.0.0",
     "memoize-one": "^6.0.0",
     "prop-types": "^15.8.1"
   },
