--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opsramp-react-diff-viewer-continued",
+  "name": "@opsramp/react-diff-viewer",
   "version": "3.2.2",
   "private": false,
   "description": "Continuation of a simple and beautiful text diff viewer component made with diff and React",
